--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=api-view
+server.port = 8080
+
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.config.import=classpath:properties/comn/api.key.properties
