--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
     developmentOnly 'org.springframework.boot:spring-boot-devtools'	// 서버 재가동없이 소스 반영을 위한 도구
     implementation 'com.googlecode.json-simple:json-simple:1.1.1' // JSON Parser
+    
+    implementation 'dev.spiralmoon:maplestory-openapi:+'	// https://github.com/SpiralMoon/maplestory.openapi
 }
 
 tasks.named('test') {
